@@ -1,3 +1,6 @@
+2011-05-19 Harri Pitkänen <hatapitk@iki.fi>
+	* Handle embedded null input characters in Python and Java interfaces.
+
 2011-05-07 Harri Pitkänen <hatapitk@iki.fi>
 	* Support FOCUS in Malaga analyzer.
 
